k8s/manifests/postgres-ai.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ai
  namespace: iooding
spec:
  selector:
    app: postgres-ai
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ai
  namespace: iooding
spec:
  serviceName: postgres-ai
  replicas: 1
  selector:
    matchLabels:
      app: postgres-ai
  template:
    metadata:
      labels:
        app: postgres-ai
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        node-role.kubernetes.io/storage: "true"
      containers:
        - name: postgres
          image: pgvector/pgvector:pg14
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: postgres-ai-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
  volumeClaimTemplates:
    - metadata:
        name: postgres-ai-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn-storage"
        resources:
          requests:
            storage: 1Gi
