k8s/manifests/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iooding-service
  namespace: iooding
spec:
  selector:
    app: iooding-blog
  ports:
    - port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: iooding
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: iooding
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
